# rendy

./: Cargo.toml  README.md
src/: camera.rs  geo.rs  io.rs  main.rs  texture.rs
src/renderer/: bind_group.rs  mod.rs  pipeline.rs
src/shaders/: shader.wgsl
