[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
image = { version = "0.24.5", default-features = false, features = ["png", "jpeg"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }
wgpu = "0.14.0"
winit = "0.27.5"
